--- a/docs/docfx/toc.yml
+++ b/docs/docfx/toc.yml
@@ -1,5 +1,3 @@
-- name: Articles
-  href: articles/
-- name: Api Documentation
+- name: InfinniPlatform API Reference
   href: api/
   homepage: api/index.md
