Add cross reference between doc and api reference

--- a/docs/docfx/toc.yml
+++ b/docs/docfx/toc.yml
@@ -1,3 +1,6 @@
-- name: InfinniPlatform API Reference
-  href: api/
-  homepage: api/index.md
+- name: Documentation
+  href: ../
+  homepage: ../
+- name: API Reference
+  href: reference/
+  homepage: reference/index.md
