--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,8 @@ docs/_build/
 # PyBuilder
 target/
 
-#Ipython Notebook
+# Ipython Notebook
 .ipynb_checkpoints
+
+# DocFX
+docs/docfx/reference/*.yml
